--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@ng-select/ng-select": "^8.1.1",
     "jspdf": "^2.5.1",
-    "@auth0/angular-jwt": "^5.0.2",
+    "ng-recaptcha": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
