--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.7",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-loading-bar": "^0.9.0",
+    "ngx-pagination": "^5.1.1",
+    "nprogress": "^0.2.0",
     "rxjs": "~7.5.0",
+    "save": "^2.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
